--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line of code </p>
 <p>A new line of code </p>
+<p>A third line to commit
+    
+</p>
 </body>
 </html>
