added an image to hello world

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 <body>
 
 <h1>Hello world!</h1>
+<div>
+    <img src="electric-glass-and-steel-hot-water-kettle.webp" alt="branch" style=""width:100%;max-width:960px">
+</div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line of code </p>
 <p>A new line of code </p>
 <p>A third line to commit
-    
+
 </p>
 </body>
 </html>
