--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Hello world!</h1>
 <div>
-    <img src="electric-glass-and-steel-hot-water-kettle.webp" alt="branch" style=""width:100%;max-width:960px">
+    <img src="electric-glass-and-steel-hot-water-kettle.webp" alt="branch" style="width:100%;max-width:960px">
 </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line of code </p>
