--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line of code </p>
 <p>A new line of code </p>
-<p>A third line to commit</p
+<p>A third line to commit</p>
 <p>after creating a branch</p>
 
 </p>
